Fixed text-alignment

--- a/developer-challenge-portfolio/assets/styles/styles.css
+++ b/developer-challenge-portfolio/assets/styles/styles.css
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #about h2 {
 		color: #646464;
-		font-size: 3.8em;
+		font-size: 2.5em;
 		padding-bottom: 1em;
 }
 
@@ -161,6 +161,7 @@ h1, h2, h3, h4, h5, h6 {
 #experience .tag-line {
 	color: white;
 	font-size: 1.4em;
+	text-align: center;
 }
 
 #experience i {
@@ -233,7 +234,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 500;
 	font-size: 1.5em;
 	margin-bottom: 1em;
-	text-align: justify;
+	text-align: left;
 }
 
 .details a, .details a:link, .details a:active{
